	PR binutils/13292 	* bfd-in.h: Include <sys/stat.h> rather than forward defining 	struct stat. 	* bfd-in2.h: Regenerate.